\name{NEWS}
\title{News for \R Package \pkg{Pigenegene}}

\section{Changes in version 1.15.14 (2020-09-08)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{combine.networks} now really removes the big TOM file
      when \code{doRemoveTOM=TRUE}.
    }
  }
}

\section{Changes in version 1.15.12 (2020-06-22)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item The \code{DiseaseColors} argument in the
      \code{plot.pigengene} function can now be set automatically.
    }
  }
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{pheatmap.type} now works fine even when the number of
      samples in a condition is only 1.
    }
  }
}

\section{Changes in version 1.13.44 (2020-04-21)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item \code{one.step.pigengene} now talks more, and automatically
      converts input data frames to matrices.
      \item \code{module.heatmap} now talks more, and does not get stuck
      if a module has only one gene, or if the expression levels of some
      genes in a module are not available in the data.
    }
  }
}

\section{Changes in version 1.13.14 (2020-03-03)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item \code{inherits(a, b)} is now used instead of \code{class(a)==b}.
    }
  }
}

\section{Changes in version 1.13.6 (2020-01-03)}{
  \subsection{Changes in existing functions}{
    \itemize{
      \item \code{doSave} was added to the \code{combine.networks()} function.
    }
  }
}

\section{Changes in version 1.13.4 (2019-11-19)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item In the \code{combine.networks()} function, the \code{netwok}
      typo was fixed.
    }
  }
}

\section{Changes in version 1.11.34 (2019-10-21)}{
  \subsection{General}{
    \itemize{
      \item The pipeline is now explained step by step in the vignette.  
    }
  }
}

\section{Changes in version 1.11.32 (2019-10-18)}{
  \subsection{Changes in existing functions}{