@@ -25,7 +25,10 @@ and other related information.}
       A named vector reporting the number of repeats for each condition
       in the oversampling process, which is done by the \code{\link{balance}} function.}
     \item{\code{eigenResults}}{
-      The full output of \code{\link[WGCNA]{moduleEigengenes}} function.}
+      The full output of \code{\link[WGCNA]{moduleEigengenes}} function
+      with some fixes, e.g., we change \code{eigengenes} to a matrix,
+      and use genes as its row names. Also, \code{varExplained} is named
+      according to modules.}
     \item{\code{Data}}{
       The data matrix of gene expression.}
     \item{\code{Labels}}{
